# LiveNodes

./: .cookiecutterrc  .env_example  .gitignore  .gitlab-ci.yml  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  Makefile  README.md  README.rst  build_pipeline.py  conf.py  create_pipeline.py  dev_muscleban.py  dev_node_v2.py  dev_pipeline.py  dev_riot.py  environment.yml  main.py  main_qt.py  main_simple.py  mockup_attr_for_biosignals22.py  nodes.json  nodes_collect.py  notes_on_fps.txt  pyproject.toml  pytest.ini  requirements.frozen.txt  requirements.txt  requirements_pi.txt  requirements_slim.txt  run_pipeline.py  setup.cfg  setup.py  smart-state.json  test_gui.py  test_mpl_blit.py  test_mpl_process.py  test_muscleban.py  test_pipeline.py  (+4 more)
.github/workflows/: format_test.yml  publish.yml  workflows.yml
data/RIoT/: 2022-02-18 23:09:03.604739.h5  2022-02-22 15:20:37.219416.csv  2022-02-22 15:20:37.219416.h5  2022-02-22 15:44:13.376280.csv  2022-02-22 15:44:13.376280.h5  2022-02-22 15:44:54.086040.csv  2022-02-22 15:44:54.086040.h5  2022-02-22 15:45:13.517101.csv  2022-02-22 15:45:13.517101.h5  2022-02-24 11:35:56.797670.h5  2022-02-24 11:40:00.851724.h5
docs/: biokit.md  clock.md  conf.py  draw.md  example.md  gui.md  index.md  installation.rst  logger.md  multiprocessing.md  nodes.md  plux.md  projects.md  serialization.md  streams.md  usage.rst
docs/advanced/: clock.md  draw.md  index.md  streams.md
docs/concepts/: index.md  ipc.md  multiprocessing.md  similar_framworks.md
docs/contributing/: index.md
docs/examples/: calculator.md  index.md
docs/libraries/: biokit.md  index.md  plux.md
docs/modules/: biokit.biokit.airwriting.rst  biokit.biokit.hierarchical.rst  biokit.biokit.legacy.rst  biokit.biokit.rst  biokit.biokit.wkm.rst  biokit.rst  core.rst  dev_muscleban.rst  dev_node_v2.rst  dev_pipeline.rst  dev_riot.rst  (+28 more)
pipelines/: 0_preprocess.json  features.json  preprocess.json  preprocess_no_vis.json  process_live.json  recognize.json  recognize_few_graphs.json  recognize_gui.json  recognize_no_vis.json  riot_live_recog.json  riot_playback.json  riot_playback_recog.json  riot_record.json  riot_record_update.json  riot_vis.json  simple.json  train.json
src/: dev_muscleban.py  dev_muscleban_plux_example.py  dev_node_v2.py  dev_pipeline.py  dev_qtads.py  dev_riot.py  dev_sensorlog.py  dev_vispy.py  dev_vispy2.py  dev_vispy3.py  main.py  main_qt.py  main_simple.py  nodes_collect.py  notes_on_riot.txt  realtime_animation.py  run_pipeline.py  smart-state.json  state.py
tests/: dev.py  dev_join.py  entrypoint_test.py  graph_circle_test.py  node_connector_test.py  node_serializer_test.py  node_test.py  node_toy_async_test.py  node_toy_test.py  node_warnings_test.py  port_test.py  registry_test.py  reportable_test.py  utils.py
(+1009 files in other folders)
